Add checking time to Path only
Add checking time to Path only